# lkjagent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
crates/lkjagent-cli/: Cargo.toml  README.md
crates/lkjagent-cli/src/: README.md  accounting.rs  args.rs  args_catalog.rs  args_help.rs  args_log.rs  args_model_log.rs  args_personal.rs  args_queue.rs  args_task.rs  config.rs  console.rs  env_file.rs  error.rs  gpt_log.rs  graph.rs  lib.rs  log.rs  main.rs  memory.rs  model_log.rs  model_log_export.rs  paths.rs  personal.rs  personal_projection.rs  personal_projection_text.rs  queue.rs  run.rs  send.rs  skills.rs  status.rs  status_artifact.rs  status_context.rs  status_deck.rs  status_facts.rs  store.rs  task.rs
crates/lkjagent-cli/tests/: README.md  args_entrypoint.rs  commands.rs  config_env.rs  config_task.rs  console_render.rs  gpt_log.rs  inspection.rs  model_log.rs  model_log_archive.rs  observability_render.rs  personal.rs  status.rs
crates/lkjagent-llm/: Cargo.toml  README.md
crates/lkjagent-llm/src/: README.md  backoff.rs  client.rs  closure.rs  error.rs  lib.rs  wire.rs
crates/lkjagent-llm/tests/: README.md  backoff.rs  client.rs  wire.rs
crates/lkjagent-runtime/: Cargo.toml  README.md
crates/lkjagent-runtime/src/: README.md  daemon.rs  error.rs  gpt_log.rs  graph_guard.rs  graph_parse.rs  graph_state.rs  graph_state_row.rs  graph_state_tracks.rs  intake.rs  lib.rs  maintenance.rs  model_log.rs  prompt.rs  recovery.rs  step.rs  task.rs  token_usage.rs
crates/lkjagent-runtime/tests/: README.md  active_mode.rs  artifact_address_recovery.rs  artifact_completion_gate.rs  artifact_ledger_completion.rs  artifact_progress_runtime.rs  attribute_recovery.rs  audit_owned_evidence.rs  authority_checkpoint.rs  authority_completion.rs  authority_decision_record.rs  authority_examples.rs  authority_fault_class.rs  authority_ledger_wiring.rs  authority_owner_question.rs  authority_payload.rs  authority_policy.rs  authority_recovery_plan.rs  authority_redesign.rs  authority_reducer.rs  automatic_maintenance.rs  budget_recovery.rs  chronos_story_replay.rs  compaction_cycle.rs  compaction_prompt_resume.rs  compaction_snapshot.rs  completion_decision.rs  completion_gate_matrix.rs  content_atom_runtime.rs  current_model_run_fixture.rs  daemon_compaction.rs  daemon_loop.rs  daemon_loop_actions.rs  dense_runtime.rs  document_completion.rs  endpoint_retry.rs  fault_retry_store.rs  fault_wait.rs  file_count_aggregate_daemon.rs  file_count_daemon.rs  (+45 more)
crates/lkjagent-tools/: Cargo.toml  README.md
crates/lkjagent-tools/src/: README.md  address.rs  artifact.rs  artifact_address_support.rs  artifact_atom_audit.rs  artifact_atom_measure.rs  artifact_card.rs  artifact_content_atom.rs  artifact_content_atom_profile.rs  artifact_contract_budget.rs  artifact_contract_render.rs  artifact_cursor_support.rs  artifact_drift.rs  artifact_kind.rs  artifact_ledger_state.rs  artifact_ledger_support.rs  artifact_manuscript_assembly.rs  artifact_manuscript_floor.rs  artifact_next.rs  (+89 more)
crates/lkjagent-xtask/: Cargo.toml  README.md
(+6150 files in other folders)
