[workspace]
members = [
    "crates/lkjagent-cli",
    "crates/lkjagent-context",
    "crates/lkjagent-llm",
    "crates/lkjagent-protocol",
    "crates/lkjagent-runtime",
    "crates/lkjagent-skills",
    "crates/lkjagent-store",
    "crates/lkjagent-tools",
    "crates/lkjagent-xtask",
]
resolver = "3"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
