[package]
name = "lkjagent-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lkjagent"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
lkjagent-context = { path = "../lkjagent-context" }
lkjagent-runtime = { path = "../lkjagent-runtime" }
lkjagent-skills = { path = "../lkjagent-skills" }
lkjagent-store = { path = "../lkjagent-store" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1"
