[package]
name = "lkjagent-llm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lkjagent-context = { path = "../lkjagent-context" }
lkjagent-protocol = { path = "../lkjagent-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
