[package]
name = "lkjagent-tools"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lkjagent-context = { path = "../lkjagent-context" }
lkjagent-protocol = { path = "../lkjagent-protocol" }
lkjagent-skills = { path = "../lkjagent-skills" }
lkjagent-store = { path = "../lkjagent-store" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
