[package]
name = "lkjagent-xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lkjagent-benchmark = { path = "../lkjagent-benchmark" }
lkjagent-store = { path = "../lkjagent-store" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
